# pcd-cpp

./: .colored_cloud.pcd.icloud  .colored_cloud.ply.icloud  .gitignore  CMakeLists.txt  ConvexHullProcessor.cpp  ConvexHullProcessor.hpp  README.md  SegmentorLib.pc.in  boundary.cpp  boundary.h  boundary.hpp  boundary_test.cpp  coefficients.csv  colored_cloud.pcd  colored_cloud.ply  pcd_write.cpp  region_growing_segmentation.cpp  segmentor.cpp  segmentor.hpp  segmentor_test.cpp  thesis.cpp
Workplace/: cluster183_projected.ply  thesis
data/2D points/: fin
data/point clouds/PCD/: colored_cloud.pcd
data/point clouds/PLY/: .colored_cloud.ply.icloud  cluster0.ply  cluster1.ply  cluster10.ply  cluster100.ply  cluster101.ply  cluster102.ply  cluster103.ply  cluster104.ply  cluster105.ply  cluster106.ply  cluster107.ply  cluster108.ply  cluster109.ply  cluster11.ply  cluster110.ply  cluster111.ply  cluster112.ply  cluster113.ply  cluster114.ply  cluster115.ply  cluster116.ply  cluster117.ply  cluster118.ply  cluster119.ply  cluster12.ply  cluster120.ply  cluster121.ply  cluster122.ply  cluster123.ply  cluster124.ply  cluster125.ply  cluster126.ply  cluster127.ply  cluster128.ply  cluster129.ply  cluster13.ply  cluster130.ply  cluster131.ply  cluster132.ply  (+97 more)
include/: segmentor.h
